--- a/main.html
+++ b/main.html
@@ -32,8 +32,8 @@
 		    <input type="text" class="form-control" id="college-input" placeholder="College" name="college-input" required>
 		</div>
 	    <div class="col-sm-3">
-			<label for="graduction-year-input" class="form-label">Graduction Year</label>
-		       <select class="form-select mt-3" id="graduction-year-input" value="Choose...">
+			<label for="grad-year-select" class="form-label">Graduction Year</label>
+		       <select class="form-select mt-3" id="grad-year-select">
 			     <option>Choose...</option>
 				 <option>2020</option>
 			     <option>2021</option>
@@ -48,7 +48,7 @@
     </div>
     <div class="form-check mb-3">
       <input class="form-check-input" type="checkbox" id="conditions-checkbox"  name="remember" required>
-      <label class="form-check-label" for="">Agree to terms and conditions</label>
+      <label class="form-check-label" for="conditions-checkbox">Agree to terms and conditions</label>
     </div>
   <button type="submit" class="btn btn-primary">Submit Form</button>
   </form>
